<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#72A0B5"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DisplayTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/medical_data" />

            <TextView
                android:id="@+id/viewPatientName"
                android:layout_width="287dp"
                android:layout_height="47dp"
                android:layout_marginTop="16dp"
                android:hint="@string/patient_name" />

            <TextView
                android:id="@+id/viewBirthcertNo"
                android:layout_width="289dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:hint="Birth_Cert_No" />

            <TextView
                android:id="@+id/viewMedicinesgiven"
                android:layout_width="294dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:hint="@string/medicines_given" />

            <TextView
                android:id="@+id/viewDiseaseDiagnosed"
                android:layout_width="288dp"
                android:layout_height="49dp"
                android:layout_marginTop="8dp"
                android:hint="@string/disease_diagnosed" />

            <TextView
                android:id="@+id/viewsideeffects"
                android:layout_width="291dp"
                android:layout_height="75dp"
                android:layout_marginTop="16dp"
                android:hint="@string/side_effects_allergic_reactions" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
